--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "*",
         "laravel/framework": "^11.9",
+        "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
